--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
-    "start": "wrangler dev"
+    "start": "wrangler dev",
+    "test": "vitest"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240208.0",
     "typescript": "^5.0.4",
+    "vitest": "^1.3.0",
     "wrangler": "^3.0.0"
   }
 }
